--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.24.0",
     "react-toastify": "^10.0.5",
-    "recharts": "^2.12.6"
+    "recharts": "^2.12.6",
+    "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
